@@ -1263,6 +1263,7 @@ CREATE TABLE tiki_forums (
   moderator_group varchar(200) default NULL,
   approval_type varchar(20) default NULL,
   outbound_address varchar(250) default NULL,
+  outbound_from varchar(250) default NULL,
   inbound_pop_server varchar(250) default NULL,
   inbound_pop_port int(4) default NULL,
   inbound_pop_user varchar(200) default NULL,
@@ -2011,6 +2012,7 @@ CREATE TABLE tiki_pages (
   points int(8) default NULL,
   votes int(8) default NULL,
   cache text,
+  wiki_cache int(10) default 0,
   cache_timestamp int(14) default NULL,
   pageRank decimal(4,3) default NULL,
   creator varchar(200) default NULL,
